--- a/mua12423/mua12423.vcxproj.filters
+++ b/mua12423/mua12423.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="mua12423.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="lexer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tokens.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="lexer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
