--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        ".clang-format": "yaml"
+        ".clang-format": "yaml",
+        "iostream": "cpp"
     }
 }
