完成编写库函数的实现

--- a/mua12423/mua12423.vcxproj
+++ b/mua12423/mua12423.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lexer.cpp" />
+    <ClCompile Include="library_functions.cpp" />
     <ClCompile Include="mua12423.cpp" />
     <ClCompile Include="table.cpp" />
   </ItemGroup>
