--- a/mua12423/mua12423.vcxproj.filters
+++ b/mua12423/mua12423.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="library_functions.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="context.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tokens.h">
@@ -51,6 +54,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ast.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="context.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
