--- a/mua12423/mua12423.vcxproj.filters
+++ b/mua12423/mua12423.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="operator.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ast_parser.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tokens.h">
@@ -66,6 +69,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="operator.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ast_parser.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
