测试修复表达式解析部分

--- a/mua12423/mua12423.vcxproj.filters
+++ b/mua12423/mua12423.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ast_parser.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ast.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tokens.h">
