--- a/mua12423/mua12423.vcxproj
+++ b/mua12423/mua12423.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ast.cpp" />
     <ClCompile Include="ast_parser.cpp" />
     <ClCompile Include="context.cpp" />
     <ClCompile Include="lexer.cpp" />
