添加控制结构的声明, 重构context

--- a/mua12423/mua12423.vcxproj
+++ b/mua12423/mua12423.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="library_functions.cpp" />
     <ClCompile Include="mua12423.cpp" />
     <ClCompile Include="operator.cpp" />
+    <ClCompile Include="statement.cpp" />
     <ClCompile Include="table.cpp" />
   </ItemGroup>
   <ItemGroup>
