--- a/mua12423/mua12423.vcxproj.filters
+++ b/mua12423/mua12423.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="ast.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="statement.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tokens.h">
