--- a/mua12423/mua12423.vcxproj
+++ b/mua12423/mua12423.vcxproj
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClCompile Include="ast.cpp" />
     <ClCompile Include="ast_parser.cpp" />
-    <ClCompile Include="context.cpp" />
+    <ClCompile Include="runtime.cpp" />
     <ClCompile Include="lexer.cpp" />
     <ClCompile Include="library_functions.cpp" />
     <ClCompile Include="mua12423.cpp" />
@@ -164,7 +164,7 @@
   <ItemGroup>
     <ClInclude Include="ast.h" />
     <ClInclude Include="ast_parser.h" />
-    <ClInclude Include="context.h" />
+    <ClInclude Include="runtime.h" />
     <ClInclude Include="function.h" />
     <ClInclude Include="lexer.h" />
     <ClInclude Include="library_functions.h" />
